Add base package